# axum-server

./: .gitignore  Cargo.toml  Dockerfile  request_samples.http
.github/workflows/: main.yaml
src/: lib.rs  main.rs  state.rs
src/handlers/: fetch_nft_data.rs  mod.rs
src/utils/: network.rs
