[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
axum = "0.6.1"
serde = "1.0.148"
tracing-subscriber = "0.3.16"
dotenv = "0.15.0"
