[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
axum = "0.6.1"
serde = "1.0.148"
tracing-subscriber = "0.3.16"
dotenv = "0.15.0"
solana-sdk = "1.14.6"
solana-client = "1.14.6"
solana-account-decoder = "1.14.6"
solana-program = "1.14.6"
mpl-token-metadata = { version = "1.4.1", features = ["no-entrypoint"] }
async-trait = "0.1.57"
tokio = "1.14.1"
anyhow = "1.0.58"
spl-token = "3.5.0"
serde_json = "1.0.89"
borsh = "0.9.3"
tower-http = { version = "0.3.0", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }
